<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">monefy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Add a cost category</string>
    <string name="kategoryprof">Add profit category</string>

    <string name="menu_home" formatted="true">All</string>
    <string name="menu_gallery">Year</string>
    <string name="menu_slideshow">Day</string>
    <string name="menu_day">Date selection</string>
    <string name="week_day">Week</string>
    <string name="add">Add</string>
    <string name="month">Month</string>
    <string name="interval">Interval</string>
    <string name="skas">Cancel</string>
    <string name="okay">Okay</string>
    <string name="cost">Costs</string>
    <string name="stonks">Profit</string>
    <string name="balance">Balance</string>
    <string name="ktgsel">Category selection</string>
    <string name="settings">Settings</string>
    <string name="onlyview">View only</string>
    <string name="greatjob">Successfully added!</string>
    <string name="wthtran">Without transactions</string>
    <string name="expence">New expence</string>
    <string name="income">New income</string>
    <string name="namektg">Name</string>
    <string name="havektg">Such a category already exists!</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="transuc">Operation successful!</string>
    <string name="controlmanag">Data management</string>
    <string name="clearall">Delete all data</string>
    <string name="specification">Absolutely all data will be deleted!</string>
    <string name="updtran">Transaction update</string>
    <string name="controlcateg">Сategory management</string>
    <string name="category">Categories</string>
    <string name="deletecategory">Delete a category</string>
    <string name="titledltctg">All entries in this category will be deleted!</string>
    <string name="newname">New name</string>
    <string name="theme">Theme</string>
    <string name="darktheme">Dark theme</string>
    <string name="clickagain">Press once again to exit!</string>
    <string name="importantmessage">There are currently no profit categories! To add a new category, click on the "three dots" on the top bar</string>
    <string name="importantmessage2">There are currently no expense categories! To add a new one, click on the "three dots" on the top bar</string>
    <string name="page">Page: </string>
    <string name="stat">Statistics</string>
    <string-array name="mode">
        <item>Interval</item>
        <item>Choice of dates</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Українська</item>
        <item>Русский</item>
    </string-array>
</resources>