<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.monefy.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.example.monefy.ui.gallery.GalleryFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.example.monefy.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow"/>
    <fragment
            android:tag="SELECTED_DAY"
            android:id="@+id/dayselected"
            android:name="com.example.monefy.ui.Dayfr.SelectedDay"
            android:label="@string/menu_day"
            tools:layout="@layout/fragment_home"/>
    <fragment

            android:id="@+id/weekselected"
            android:name="com.example.monefy.ui.Dayfr.Weeks"
            android:label="@string/week_day"
            tools:layout="@layout/fragment_slideshow">

    </fragment>
    <fragment

            android:id="@+id/motnhselected"
            android:name="com.example.monefy.ui.Dayfr.Months"
            android:label="@string/month"
            tools:layout="@layout/fragment_slideshow"/>
    <fragment

            android:id="@+id/intervaldays"
            android:name="com.example.monefy.ui.intervdays.IntervalDays"
            android:label="@string/interval"
            tools:layout="@layout/fragment_home"/>

    <fragment

            android:id="@+id/settings"
            android:name="com.example.monefy.ui.SettingsClass"
            android:label="@string/settings"
            tools:layout="@layout/fragmentsettings"/>

</navigation>